--- a/Bitad2021/Bitad2021/Views/RegisterPage.xaml
+++ b/Bitad2021/Bitad2021/Views/RegisterPage.xaml
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<xamForms:ReactiveContentPage x:TypeArguments="viewModels:LoginViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<xamForms:ReactiveContentPage x:TypeArguments="viewModels:RegisterViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
-                              x:Class="Bitad2021.Views.LoginPage"
-                              NavigationPage.HasNavigationBar="False">
+                              x:Class="Bitad2021.Views.RegisterPage">
     <ContentPage.Content>
         <StackLayout Margin="50">
+            <Entry Text="{Binding Email}" Placeholder="Email address"/>
+            <Entry Text="{Binding FirstName}" Placeholder="First name"/>
+            <Entry Text="{Binding LastName}" Placeholder="Last name"/>
             <Entry Text="{Binding Username}" Placeholder="Username"/>
             <Entry Text="{Binding Password}" Placeholder="Password"/>
-            <Button Text="Login" Command="{Binding LoginCommand}"/>
-            <Button Text="Register" Command="{Binding RegisterNavigationCommand}"/>
+            <Button Command="{Binding RegisterCommand}" Text="Register"/>
         </StackLayout>
     </ContentPage.Content>
 </xamForms:ReactiveContentPage>
