--- a/Bitad2021/Bitad2021/Views/AgendasPage.xaml
+++ b/Bitad2021/Bitad2021/Views/AgendasPage.xaml
@@ -1,24 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<xamForms:ReactiveContentPage x:TypeArguments="viewModels:AgendasViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<xamForms:ReactiveTabbedPage x:TypeArguments="viewModels:AgendasViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
+                              xmlns:views="clr-namespace:Bitad2021.Views;assembly=Bitad2021"
                               x:Class="Bitad2021.Views.AgendasPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <ListView ItemsSource="{Binding Agendas}">  
-                <ListView.ItemTemplate>  
-                    <DataTemplate>  
-                        <ViewCell>  
-                            <StackLayout Orientation="Horizontal">
-                                <Image Source="{Binding Picture}"/>  
-                                <Label Text="{Binding Title}"/>  
-                            </StackLayout>  
-                        </ViewCell>  
-                    </DataTemplate>  
-                </ListView.ItemTemplate>  
-            </ListView>  
-        </StackLayout>
-    </ContentPage.Content>
-</xamForms:ReactiveContentPage>
+    
+    <views:LecturesPage Title="Wykłady" BindingContext="{Binding LecturesViewModel}"/>
+    <views:WorkshopsPage Title="Warsztaty" BindingContext="{Binding WorkshopsViewModel}"/>
+    
+</xamForms:ReactiveTabbedPage>
