--- a/Bitad2021/Bitad2021/Views/TabbedPage.xaml
+++ b/Bitad2021/Bitad2021/Views/TabbedPage.xaml
@@ -5,11 +5,20 @@
                              xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                              xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
                              xmlns:views="clr-namespace:Bitad2021.Views;assembly=Bitad2021"
+                             xmlns:androidSpecific="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
+                             xmlns:iOsSpecific="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
                              x:Class="Bitad2021.Views.TabbedView"
-                             NavigationPage.HasNavigationBar="False">
+                             NavigationPage.HasNavigationBar="False"
+                             androidSpecific:TabbedPage.ToolbarPlacement="Bottom">
     
-    <views:AgendasPage Title="Agenda" BindingContext="{Binding AgendasViewModel}"/>
-    <views:QrScannerPage Title="Gra QR" BindingContext="{Binding QrScannerViewModel}"/>
-    <views:SettingsPage Title="Ustawienia" BindingContext="{Binding SettingsViewModel}"/>
+    <views:AgendasPage Title="Agenda" 
+                       BindingContext="{Binding AgendasViewModel}"
+                       IconImageSource="agenda_icon.png"/>
+    <views:QrScannerPage Title="Gra QR" 
+                         BindingContext="{Binding QrScannerViewModel}"
+                         IconImageSource="qr_icon.png"/>
+    <views:SettingsPage Title="Ustawienia" 
+                        BindingContext="{Binding SettingsViewModel}"
+                        IconImageSource="settings_icon.png"/>
 
 </xamForms:ReactiveTabbedPage>
