--- a/Bitad2021/Bitad2021/Views/LecturePage.xaml
+++ b/Bitad2021/Bitad2021/Views/LecturePage.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<xamForms:ReactiveContentPage x:TypeArguments="viewModels:SettingsViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<xamForms:ReactiveContentPage x:TypeArguments="viewModels:LectureViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
-                              x:Class="Bitad2021.Views.SettingsPage">
+                              x:Class="Bitad2021.Views.LecturePage"
+                              NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <StackLayout>
-            <Button Command="{Binding LogoutCommand}" Text="Wyloguj"/>
+            <Label Text="{Binding Lecture.Title}"/>
         </StackLayout>
     </ContentPage.Content>
 </xamForms:ReactiveContentPage>
