--- a/Bitad2021/Bitad2021/Views/RegisterPage.xaml
+++ b/Bitad2021/Bitad2021/Views/RegisterPage.xaml
@@ -12,6 +12,8 @@
             <Entry Text="{Binding LastName}" Placeholder="Last name"/>
             <Entry Text="{Binding Username}" Placeholder="Username"/>
             <Entry Text="{Binding Password}" Placeholder="Password"/>
+            <!-- TODO: Check if thirt size is selected -->
+            <Picker ItemsSource="{Binding ShirtSizes}" SelectedItem="SelectedShirtSize" Title="Rozmiar koszulki" />
             <Button Command="{Binding RegisterCommand}" Text="Register"/>
         </StackLayout>
     </ContentPage.Content>
