--- a/Bitad2021/Bitad2021/Views/SettingsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/SettingsPage.xaml
@@ -4,10 +4,14 @@
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
+                              xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
                               x:Class="Bitad2021.Views.SettingsPage">
     <ContentPage.Content>
         <StackLayout>
-            <Button Command="{Binding LogoutCommand}" Text="Wyloguj"/>
+            <zxing:ZXingBarcodeImageView BarcodeValue="abcd"/>
+            <Button Command="{Binding LogoutCommand}" Text="Wyloguj"
+                    Style="{StaticResource RoundButtonWithBorder}"
+                    Margin="60,0,60,0"/>
         </StackLayout>
     </ContentPage.Content>
 </xamForms:ReactiveContentPage>
