--- a/Bitad2021/Bitad2021/Views/SettingsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/SettingsPage.xaml
@@ -5,10 +5,17 @@
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
                               xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
+                              xmlns:common="clr-namespace:ZXing.Common;assembly=zxing.portable"
                               x:Class="Bitad2021.Views.SettingsPage">
     <ContentPage.Content>
         <StackLayout>
-            <zxing:ZXingBarcodeImageView BarcodeValue="abcd"/>
+            <zxing:ZXingBarcodeImageView BarcodeValue="{Binding User.AttendanceCode}"
+                                         WidthRequest="300"
+                                         HeightRequest="300">
+                <zxing:ZXingBarcodeImageView.BarcodeOptions>
+                    <common:EncodingOptions Height="300" Width="300"/>
+                </zxing:ZXingBarcodeImageView.BarcodeOptions>
+            </zxing:ZXingBarcodeImageView>
             <Button Command="{Binding LogoutCommand}" Text="Wyloguj"
                     Style="{StaticResource RoundButtonWithBorder}"
                     Margin="60,0,60,0"/>
