--- a/Bitad2021/Bitad2021/Views/SpeakerPage.xaml
+++ b/Bitad2021/Bitad2021/Views/SpeakerPage.xaml
@@ -10,47 +10,51 @@
         <ScrollView>
             <Frame HasShadow="True"
                    Margin="10">
-                <StackLayout>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Frame Grid.Column="1" Padding="0"
-                               HasShadow="False" 
-                               CornerRadius="60"
-                               HeightRequest="120">
-                            <Image Source="{Binding Speaker.Picture}"
-                                   HorizontalOptions="FillAndExpand"
-                                   VerticalOptions="FillAndExpand"
-                                   Aspect="AspectFill"/>
-                        </Frame>
-                    </Grid>
+                <Frame HasShadow="True"
+                       Margin="10">
+                    <StackLayout>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="120"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Frame Grid.Column="1" Padding="0"
+                                   HasShadow="False" 
+                                   CornerRadius="60"
+                                   HeightRequest="120">
+                                <Image Source="{Binding Speaker.Picture}"
+                                       HorizontalOptions="FillAndExpand"
+                                       VerticalOptions="FillAndExpand"
+                                       Aspect="AspectFill"/>
+                            </Frame>
+                        </Grid>
                     
-                    <Label Text="{Binding Speaker.Name}"
-                           FontAttributes="Bold"
-                           FontSize="Title"
-                           TextColor="#333"
-                           HorizontalOptions="Center"/>
+                        <Label Text="{Binding Speaker.Name}"
+                               FontAttributes="Bold"
+                               FontSize="Title"
+                               TextColor="#333"
+                               HorizontalOptions="Center"/>
                     
-                    <Label Text="{Binding Speaker.Company}"
-                           FontAttributes="Bold"
-                           FontSize="Subtitle"
-                           TextColor="#333"
-                           HorizontalOptions="Center"/>
-                    <!--TODO: Dodać tutaj hiperłącze -->
-                    <Label Text="{Binding Speaker.Website}"
-                           FontAttributes="Italic"
-                           FontSize="Subtitle"
-                           TextColor="#333"
-                           HorizontalOptions="Center"/>
+                        <Label Text="{Binding Speaker.Company}"
+                               FontAttributes="Bold"
+                               FontSize="Subtitle"
+                               TextColor="#333"
+                               HorizontalOptions="Center"/>
+                        <!--TODO: Dodać tutaj hiperłącze -->
+                        <Label Text="{Binding Speaker.Website}"
+                               FontAttributes="Italic"
+                               FontSize="Subtitle"
+                               TextColor="#333"
+                               HorizontalOptions="Center"/>
                     
-                    <Label Text="{Binding Speaker.Description}"
-                           FontSize="Body"
-                           TextColor="#333"
-                           LineBreakMode="WordWrap"/>
-                </StackLayout>
+                        <Label Text="{Binding Speaker.Description}"
+                               FontSize="Body"
+                               TextColor="#333"
+                               LineBreakMode="WordWrap"/>
+                    </StackLayout>
+                </Frame>
+                    
             </Frame>
         </ScrollView>
         
