--- a/Bitad2021/Bitad2021/Views/WorkshopPage.xaml
+++ b/Bitad2021/Bitad2021/Views/WorkshopPage.xaml
@@ -4,12 +4,78 @@
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
-                              x:Class="Bitad2021.Views.WorkshopPage">
+                              x:Class="Bitad2021.Views.WorkshopPage"
+                              NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Hello, world!"
-                   VerticalOptions="CenterAndExpand"
-                   HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView>
+            <Frame HasShadow="True"
+                   Margin="10">
+                <StackLayout>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Frame Grid.Column="1" Padding="0"
+                               HasShadow="False" 
+                               CornerRadius="60"
+                               HeightRequest="120">
+                            <Image Source="{Binding Workshop.Speaker.Picture}"
+                                   HorizontalOptions="FillAndExpand"
+                                   VerticalOptions="FillAndExpand"
+                                   Aspect="AspectFill"/>
+                        </Frame>
+                        <Image Grid.Column="1" 
+                               Margin="85,85,0,0"
+                               Source="info_icon.png">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Command="{Binding ViewSpeakerCommand}"
+                                    NumberOfTapsRequired="1"/>
+                            </Image.GestureRecognizers>
+                        </Image>
+                    </Grid>
+                    
+                
+                    <Label Text="{Binding Workshop.Title}"
+                           FontAttributes="Bold"
+                           FontSize="Title"
+                           TextColor="#333"
+                           HorizontalOptions="CenterAndExpand"/>
+                    
+                    <StackLayout Spacing="0"
+                                 HorizontalOptions="Center">
+                        <Label FontSize="Subtitle"
+                               HorizontalTextAlignment="Center">
+                            <Label.Text>
+                                <MultiBinding StringFormat="{}{0:HH:mm} - {1:HH:mm}">
+                                    <Binding Path="Workshop.Start"/>
+                                    <Binding Path="Workshop.End"/>
+                                </MultiBinding>
+                            </Label.Text>
+                        </Label>
+                        <Label Text="{Binding Workshop.Room}" FontSize="Subtitle" HorizontalTextAlignment="Center"/>
+                        <Label FontSize="Subtitle"
+                               HorizontalTextAlignment="Center">
+                            <Label.Text>
+                                <MultiBinding StringFormat="{}{0}/{1}">
+                                    <Binding Path="Workshop.ParticipantsNumber"/>
+                                    <Binding Path="Workshop.MaxParticipants"/>
+                                </MultiBinding>
+                            </Label.Text>
+                        </Label>
+                    </StackLayout>
+                    
+                    <Label Text="{Binding Workshop.Description}"
+                           FontSize="Body"
+                           TextColor="#333"
+                           LineBreakMode="WordWrap"/>
+                    
+                    
+                   
+                </StackLayout>
+            </Frame>
+        </ScrollView>
     </ContentPage.Content>
 </xamForms:ReactiveContentPage>
