--- a/Bitad2021/Bitad2021/Views/WorkshopsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/WorkshopsPage.xaml
@@ -42,10 +42,28 @@
                                             </MultiBinding>
                                         </Label.Text>
                                     </Label>
-                                    <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                                           Text="{Binding Title}" 
-                                           FontAttributes="Bold"
-                                           TextColor="#333"/>  
+                                    
+                                    
+                                    
+                                    <StackLayout Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                                 VerticalOptions="Center">
+                                        <Label 
+                                            Text="{Binding Title}" 
+                                            FontAttributes="Bold"
+                                            TextColor="#333"/>  
+                                        <!-- TODO: Make this red if full -->
+                                        <Label FontSize="Micro"
+                                               FontAttributes="Italic"
+                                               TextColor="#333">
+                                            <Label.Text>
+                                                <MultiBinding StringFormat="{}{0}/{1}">
+                                                    <Binding Path="ParticipantsNumber"/>
+                                                    <Binding Path="MaxParticipants"/>
+                                                </MultiBinding>
+                                            </Label.Text>
+                                        </Label>
+                                    </StackLayout>
+
                                     
                                     <Frame Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
                                             Padding="0" 
