--- a/Bitad2021/Bitad2021/Views/SettingsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/SettingsPage.xaml
@@ -31,7 +31,7 @@
                            FontAttributes="Bold"/>
                 
                     <Label Grid.Row="2" Grid.Column="0" Text="Twoje punkty QR: "/>
-                    <Label Grid.Row="2" Grid.Column="1" Text="{Binding User.CurrentScore}"
+                    <Label Grid.Row="2" Grid.Column="1" Text="{Binding CurrentScore}"
                            FontAttributes="Bold"/>
                 
                 </Grid>
