--- a/Bitad2021/Bitad2021/Views/LoginPage.xaml
+++ b/Bitad2021/Bitad2021/Views/LoginPage.xaml
@@ -14,7 +14,9 @@
             <Entry Text="{Binding Username}" Placeholder="Login"
                    Margin="60,60,60,0"/>
             <Entry Text="{Binding Password}" Placeholder="Hasło"
-                   Margin="60,0,60,0"/>
+                   Margin="60,0,60,0"
+                   IsPassword="True"
+                   ReturnCommand="{Binding LoginCommand}"/>
             <Button Text="Zaloguj się" Command="{Binding LoginCommand}"
                     Style="{StaticResource RoundButtonWithBorder}"
                     Margin="60,0,60,0"/>
