--- a/Bitad2021/Bitad2021/Views/LoginPage.xaml
+++ b/Bitad2021/Bitad2021/Views/LoginPage.xaml
@@ -11,6 +11,7 @@
         
         <StackLayout Margin="50">
             <Image Source="bitad_logo.png"/>
+            
             <Entry Text="{Binding Username}" Placeholder="Login"
                    Margin="60,60,60,0"/>
             <Entry Text="{Binding Password}" Placeholder="Hasło"
@@ -20,9 +21,16 @@
             <Button Text="Zaloguj się" Command="{Binding LoginCommand}"
                     Style="{StaticResource RoundButtonWithBorder}"
                     Margin="60,0,60,0"/>
-            <Button Text="Rejestracja" Command="{Binding RegisterNavigationCommand}"
-                    Style="{StaticResource RoundButtonWithBorder}"
-                    Margin="60,0,60,0"/>
+
+            <Label HorizontalOptions="Center"
+                   TextColor="#4093ce"
+                   FontSize="Subtitle"
+                   Text="Rejestracja"
+                   HorizontalTextAlignment="Center">
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding TapLinkCommand}" CommandParameter="http://212.106.184.93/registration"/>
+                </Label.GestureRecognizers>
+            </Label>
             
             
         </StackLayout>
