--- a/Bitad2021/Bitad2021/Views/QrScannerPage.xaml
+++ b/Bitad2021/Bitad2021/Views/QrScannerPage.xaml
@@ -33,7 +33,7 @@
                         OnFinishedAnimation="AnimationView_OnOnFinishedAnimation"
                     />
                 </Grid>
-                
+                <Grid VerticalOptions="End" x:Name="SnackBarAnchor"/>
             </Grid>
     </ContentPage.Content>
     
