--- a/Bitad2021/Bitad2021/Views/LoginPage.xaml
+++ b/Bitad2021/Bitad2021/Views/LoginPage.xaml
@@ -10,7 +10,8 @@
     <ContentPage.Content>
         
         <StackLayout Margin="50">
-            <Image Source="bitad_logo.png"/>
+            <Image Source="bitad_logo.png"
+                   HeightRequest="170"/>
             
             <Entry Text="{Binding Username}" Placeholder="Login"
                    Margin="60,60,60,0"/>
